--- a/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Views/Shared/_Layout.cshtml
@@ -24,6 +24,7 @@
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Sports", "Index", "Demos")</li>
+                    <li>@Html.ActionLink("Events", "Welcome", "Demos")</li>
                 </ul>
             </div>
         </div>
